# joop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
python/: README.md  pyproject.toml
python/docs/: changelog.md  index.md  installation.md  usage.md
python/docs/source/: changelog.rst  conf.py  index.rst  modules.rst
python/joop/: __init__.py  cli.py
python/joop/abstract/: README.md  __init__.py
python/joop/cli/: README.md  __init__.py  __main__.py  test_flask.py
python/joop/dao/: __init__.py
python/joop/flask/: __init__.py  example.py  flask_view.py
python/joop/http/: methods.py
python/joop/sql/: __init__.py
python/joop/tests/: __init__.py  test_joop.py  test_sql.py  test_templater.py  test_view.py  test_web.py
python/joop/web/: __init__.py  component.py  components.py  html.py  j_env.py  templater.py  view.py
python/joop/web/examples/: hello.py  table.py  view.py
templates/examples/: hello_name.html  hello_supercomponent.html
templates/examples/table/: alp_table.html  page.html
