[project]
name = "joop"
version = "0.0.1"
description = "Justin's Object-Oriented Paradigms"
authors = [
    {name = "Justin Rushin"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=7.0)"
]

classifiers = [
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Libraries'
]
keywords = ["object-oriented programming", "DAO", "HTMX", "Python"]

[project.urls]
bugs = "https://github.com/rushinjgr/joop/issues"
changelog = "https://github.com/rushinjgr/joop/blob/master/python/docs/changelog.md"
homepage = "https://github.com/rushinjgr/joop"
source = "https://github.com/rushinjgr/joop"

[project.scripts]
joop = "joop.cli:main"

[dependency-groups]
dev = [
    "coverage (>=7.13)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "joop/tests"
]
